Fix spacing

--- a/src/index.sass
+++ b/src/index.sass
@@ -43,9 +43,11 @@ hr
 
 .background_orange
   background: linear-gradient(45deg, #d17543 0%,#df7b3d 36%,#f48534 60%,#f79c59 100%)
+  padding-bottom: 5.295rem
 
 .background_white
   background-color: #fff
+  padding-bottom: 5.295rem
 
 // TEXT CONTAINER ______________________________________________________________
 .text-container
