--- a/src/views/About/About.sass
+++ b/src/views/About/About.sass
@@ -3,7 +3,6 @@
 
 // CONTENT _____________________________________________________________________
 .about__content
-  margin-bottom: 4.236rem
   padding: 0 1.618rem
   width: 100%
 
